# dummy-a2a

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  pr-title.yml  publish.yml  release.yml  sync-dev-after-release.yml
docs/: linkedin-readiness-review.md
scripts/: check-a2a-sdk-version.sh  check-version.sh  check_a2a_sdk_version.py  commit.sh  install-git-hooks.sh  lint-check.sh  lint.sh  open-release-pr.sh  smoke-publish-wheel.sh  test.sh  type-check.sh  validate_commit_msg.py  verify.sh
src/dummy_a2a/: __init__.py  _utils.py  agent_card.py  cli.py  contracts.py  executor.py  plugin.py  server.py  testing.py
src/dummy_a2a/skills/: __init__.py  auth_required.py  base.py  data_response.py  debug.py  echo.py  ext.py  ext_required.py  fail.py  file_response.py  multi_artifact.py  multi_turn.py  reject.py  slow_task.py  stream.py
tests/: conftest.py  helpers.py  test_agent_card.py  test_auth_required.py  test_check_a2a_sdk_version.py  test_contracts.py  test_data_response.py  test_debug.py  test_echo.py  test_error_responses.py  test_ext.py  test_fail.py  test_file_response.py  test_get_task.py  test_https.py  test_list_tasks.py  test_multi_artifact.py  test_multi_turn.py  test_plugin.py  test_push_notifications.py  test_reject.py  test_slow_task.py  test_stream.py
